# inversipy

./: 404.html  CLAUDE.md  LICENSE  PLAN_COLLECTION_INJECTION.md  PLAN_NAMED_BINDINGS.md  README.md  REVIEW-reduce-complexity.md  REVIEW.md  cliff.toml  codecov.yml  index.html  inversipy_pytest.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
advanced/freezing/: index.html
advanced/hierarchy/: index.html
advanced/testing/: index.html
advanced/validation/: index.html
best-practices/: index.html
core/container/: index.html
core/modules/: index.html
core/scopes/: index.html
docs/: best-practices.md  getting-started.md  index.md  philosophy.md
docs/advanced/: freezing.md  hierarchy.md  testing.md  validation.md
docs/core/: container.md  modules.md  scopes.md
docs/injection/: collection.md  constructor.md  factory-lazy.md  function.md  named.md  optional.md  property.md
docs/integrations/: click.md  fastapi.md  flask.md  pytest.md
examples/: README.md  __init__.py  basic_usage.py  click_example.py  collection_injection_example.py  decorators_example.py  fastapi_example.py  flask_example.py  modules_example.py  scopes_example.py
getting-started/: index.html
injection/collection/: index.html
injection/constructor/: index.html
injection/function/: index.html
injection/named/: index.html
injection/optional/: index.html
injection/property/: index.html
integrations/fastapi/: index.html
inversipy/: __init__.py  _wrappers.py  binding.py  binding_strategies.py  click.py  container.py  decorators.py  exceptions.py  fastapi.py  flask.py  module.py  mypy_plugin.py  scopes.py  types.py
search/: search_index.json
tests/: __init__.py  _concurrency.py  conftest.py  test_binding_strategies.py  test_click_integration.py  test_collection_injection.py  test_container.py  test_container_freeze.py  test_custom_scopes.py  test_decorators.py  test_examples.py  test_factory_lazy.py  test_fastapi_integration.py  test_flask_integration.py  test_module.py  test_mypy_plugin.py  test_named_bindings.py  test_optional_dependencies.py  test_pytest_integration.py  test_scopes.py  test_thread_safety.py  test_validation.py
