[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "inversipy"
version = "0.1.0"
description = "A powerful and type-safe dependency injection/IoC library for Python"
readme = "README.md"
license = "MIT"
authors = ["inversipy contributors"]
keywords = ["dependency-injection", "ioc", "inversion-of-control", "di", "container"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{include = "inversipy"}]

[tool.poetry.urls]
Homepage = "https://github.com/mottetm/inversipy"
Repository = "https://github.com/mottetm/inversipy"

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
mypy = ">=1.0.0"
black = ">=23.0.0"
ruff = ">=0.1.0"
pytest-cov = ">=4.0.0"
fastapi = ">=0.100.0"
mkdocs-material = ">=9.0.0"
httpx = ">=0.24.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N807"]  # Allow __init__ and other special methods

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["inversipy"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
